Made changes to nav font size and footer gap fix

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,10 +17,6 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
-}
-
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
   color: var(--bs-secondary-color);
   text-align: end;
@@ -58,7 +54,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 
 /* DESKTOP MENU */
@@ -74,6 +70,7 @@ body {
     color: #fff;
     text-decoration: none;
     font-weight: 500;
+    font-size: 1.2rem;
 }
 
 .nav-menu li a:hover {
@@ -103,8 +100,8 @@ body {
 
         background-color: #c4162a;
         flex-direction: column;
-        width: 220px;
-        padding: 1rem;
+        width: 300px;
+        padding: 1.2rem;
 
         display: none;
         box-shadow: 0 8px 20px rgba(0,0,0,0.25);
